--- a/flask-with-materialize/templates/index.html
+++ b/flask-with-materialize/templates/index.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
+    <meta charset="UTF-8" />
     <title>Hello World</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <nav>
-        <div class="nav-wrapper">
-            <a href="#" class="brand-logo">Logo</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
-            </ul>
-        </div>
+      <div class="nav-wrapper">
+        <a href="#!" class="brand-logo"
+          ><i class="material-icons">cloud</i>Logo</a
+        >
+        <ul class="right hide-on-med-and-down">
+          <li>
+            <a href="sass.html"><i class="material-icons">search</i></a>
+          </li>
+          <li>
+            <a href="badges.html"><i class="material-icons">view_module</i></a>
+          </li>
+          <li>
+            <a href="collapsible.html"><i class="material-icons">refresh</i></a>
+          </li>
+          <li>
+            <a href="mobile.html"><i class="material-icons">more_vert</i></a>
+          </li>
+        </ul>
+      </div>
     </nav>
+
     <div class="container">
-        <h1>Hello World</h1>
+      <h1>Hello World</h1>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</body>
+  </body>
 </html>
