--- a/flask-with-materialize/templates/index.html
+++ b/flask-with-materialize/templates/index.html
@@ -11,17 +11,19 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='styles/footer.css') }}"
+    />
   </head>
   <body>
-    <nav>
+    <nav class="deep-purple darken-4">
       <div class="nav-wrapper">
         <a href="#!" class="brand-logo"
           ><i class="material-icons">cloud</i>Logo</a
         >
         <ul class="right hide-on-med-and-down">
-          <li>
-            <a href="sass.html"><i class="material-icons">search</i></a>
-          </li>
           <li>
             <a href="badges.html"><i class="material-icons">view_module</i></a>
           </li>
@@ -32,12 +34,52 @@
             <a href="mobile.html"><i class="material-icons">more_vert</i></a>
           </li>
         </ul>
+        <form>
+          <div class="right input-field">
+            <input id="search" type="search" required />
+            <label class="label-icon" for="search"
+              ><i class="material-icons">search</i></label
+            >
+            <i class="material-icons">close</i>
+          </div>
+        </form>
       </div>
     </nav>
 
-    <div class="container">
-      <h1>Hello World</h1>
-    </div>
+    <main>
+      <div class="container">
+        <h1>Steam verde fodase</h1>
+        <p>why the hell is that footer so fking big????</p>
+      </div>
+    </main>
+    <footer class="page-footer deep-purple darken-4">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Footer Content</h5>
+            <p class="grey-text text-lighten-4">
+              You can use rows and columns here to organize your footer content.
+            </p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Links</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+          © 2014 Copyright Text
+          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        </div>
+      </div>
+    </footer>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
 </html>
