--- a/flask-with-materialize/templates/layout.html
+++ b/flask-with-materialize/templates/layout.html
@@ -14,11 +14,16 @@
     <link
       rel="stylesheet"
       type="text/css"
+      href="{{ url_for('static', filename='styles/navbar.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
       href="{{ url_for('static', filename='styles/footer.css') }}"
     />
   </head>
   <body>
-    <nav class="deep-purple darken-4">
+    <nav>
       <div class="nav-wrapper">
         <a href="#!" class="brand-logo"
           ><i class="material-icons">cloud</i>Logo</a
@@ -49,7 +54,7 @@
     <main>
       <div class="container">{% block content %}{% endblock %}</div>
     </main>
-    <footer class="page-footer deep-purple darken-4">
+    <footer class="page-footer">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
