--- a/templates/top-games.html
+++ b/templates/top-games.html
@@ -9,7 +9,7 @@ block content %}
     <div class="col s12 m4 l2">
       <div class="card">
         <div class="card-image">
-          <!-- <img src="../static/img/mineirinho.jpg" /> -->
+          <img src="../static/img/mineirinho.jpg" />
         </div>
         <div class="card-content">
           <p>Mineirinho</p>
