flexbox wip from top-games screen 13-08-23

--- a/templates/top-games.html
+++ b/templates/top-games.html
@@ -5,8 +5,8 @@ block content %}
 <div class="games-card">
   {% for i in range(0,5) %}
   <div class="row">
-    {% for i in range(0,6) %}
-    <div class="col s12 m4 l2">
+    {% for i in range(0,4) %}
+    <div id="card-component">
       <div class="card">
         <div class="card-image">
           <img src="../static/img/mineirinho.jpg" />
