--- a/static/styles/cards.css
+++ b/static/styles/cards.css
@@ -1,8 +1,33 @@
+.row {
+  display: grid;
+  gap: 50px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+}
+
+@media only screen and (max-width: 1400px) {
+  .row {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .row {
+    grid-template-columns: 1fr;
+  }
+}
+
+#card-component {
+  width: 300px;
+  margin: 0 0 30px 3%;
+}
+
 .games-card {
   color: black;
+  width: 100%;
 }
 
 .games-card .card-image {
-  height: 200;
-  width: 100;
+  height: 100%;
+  width: 100%;
 }
