--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,7 @@
       });
     </script>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %} {% endblock %}</title>
     <link
       rel="stylesheet"
@@ -16,6 +17,11 @@
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='styles/index.css') }}"
     />
     <link
       rel="stylesheet"
@@ -132,7 +138,7 @@
 
     <main>{% block content %}{% endblock %}</main>
     <footer class="page-footer">
-      <div class="container">
+      <div>
         <div class="row">
           <div class="col l6 s12">
             <h5 class="white-text">Footer Content</h5>
@@ -152,7 +158,7 @@
         </div>
       </div>
       <div class="footer-copyright">
-        <div class="container">
+        <div>
           © 2014 Copyright Text
           <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
         </div>
