--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,170 +1,138 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        var elems = document.querySelectorAll(".sidenav");
-        var instances = M.Sidenav.init(elems);
-      });
-    </script>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %} {% endblock %}</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{{ url_for('static', filename='styles/index.css') }}"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{{ url_for('static', filename='styles/navbar.css') }}"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{{ url_for('static', filename='styles/footer.css') }}"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{{ url_for('static', filename='styles/main.css') }}"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{{ url_for('static', filename='styles/cards.css') }}"
-    />
-  </head>
-  <body>
-    <nav>
-      <div class="nav-wrapper">
-        <a href="/">
-          <img
-            class="brand-logo"
-            src="../static/img/channels4_profile.png"
-            alt="steam-verde-icon"
-          />
-        </a>
 
-        <a href="#" data-target="mobile-demo" class="right sidenav-trigger"
-          ><i class="material-icons">menu</i></a
-        >
+<head>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      var elems = document.querySelectorAll(".sidenav");
+      var instances = M.Sidenav.init(elems);
+    });
+  </script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>{% block title %} {% endblock %}</title>
+  <link rel="icon" href="../static/img/channels4_profile.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/index.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/navbar.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/footer.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/cards.css') }}" />
+</head>
 
-        <ul class="right hide-on-med-and-down">
-          <li>
-            <a href="/top-games">
-              <i class="material-icons left">view_module</i>
-              List of top games
-            </a>
-          </li>
-          <li>
-            <a href="/top-games">
-              <i class="material-icons left">view_module</i>
-              List of top games
-            </a>
-          </li>
-          <li>
-            <a href="/top-games">
-              <i class="material-icons left">view_module</i>
-              List of top games
-            </a>
-          </li>
-        </ul>
+<body>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="/">
+        <img class="brand-logo" src="../static/img/channels4_profile.png" alt="steam-verde-icon" />
+      </a>
 
-        <ul class="sidenav" id="mobile-demo">
-          <li style="display: flex">
-            <label class="label-icon" for="search"
-              ><i class="material-icons left" style="color: black"
-                >search</i
-              ></label
-            >
-            <!-- <i class="material-icons" style="color: black">search</i> -->
-            <input type="text" placeholder="Search" style="margin-top: 5px" />
-          </li>
-          <!-- <li>
-            
-              <div class="input-field inline">
-                <input
-                  id="search_sidenav"
-                  type="search"
-                  required
-                  placeholder="Search"
-                />
-               
-                <i class="material-icons">close</i>
-              </div>
-            </form>
-          </li> -->
-          <li>
-            <a href="sass.html">
-              <i class="material-icons left">search</i>
-              Link with Left Icon
-            </a>
-          </li>
-          <li>
-            <a href="/top-games">
-              <i class="material-icons left">view_module</i>
-              List of top games
-            </a>
-          </li>
-          <li>
-            <a href="collapsible.html"><i class="material-icons">refresh</i></a>
-          </li>
-          <li>
-            <a href="mobile.html"><i class="material-icons">more_vert</i></a>
-          </li>
-        </ul>
+      <a href="#" data-target="mobile-demo" class="right sidenav-trigger"><i class="material-icons">menu</i></a>
 
-        <form>
-          <div class="right input-field hide-on-med-and-down">
-            <input id="search" type="search" required />
-            <label class="label-icon" for="search">
-              <i class="material-icons">search</i>
-            </label>
-            <i class="material-icons">close</i>
-          </div>
-        </form>
+      <ul class="right hide-on-med-and-down">
+        <li>
+          <a href="/top-games">
+            <i class="material-icons left">view_module</i>
+            List of top games
+          </a>
+        </li>
+        <li>
+          <a href="/top-games">
+            <i class="material-icons left">view_module</i>
+            List of top games
+          </a>
+        </li>
+        <li>
+          <a href="/top-games">
+            <i class="material-icons left">view_module</i>
+            List of top games
+          </a>
+        </li>
+      </ul>
+
+      <ul class="sidenav" id="mobile-demo">
+        <li style="display: flex">
+          <label class="label-icon" for="search"><i class="material-icons left" style="color: black">search</i></label>
+          <!-- <i class="material-icons" style="color: black">search</i> -->
+          <input type="text" placeholder="Search" style="margin-top: 5px" />
+        </li>
+        <!-- <li>
+              
+                <div class="input-field inline">
+                  <input
+                    id="search_sidenav"
+                    type="search"
+                    required
+                    placeholder="Search"
+                  />
+                
+                  <i class="material-icons">close</i>
+                </div>
+              </form>
+            </li> -->
+        <li>
+          <a href="sass.html">
+            <i class="material-icons left">search</i>
+            Link with Left Icon
+          </a>
+        </li>
+        <li>
+          <a href="/top-games">
+            <i class="material-icons left">view_module</i>
+            List of top games
+          </a>
+        </li>
+        <li>
+          <a href="collapsible.html"><i class="material-icons">refresh</i></a>
+        </li>
+        <li>
+          <a href="mobile.html"><i class="material-icons">more_vert</i></a>
+        </li>
+      </ul>
+
+      <form>
+        <div class="right input-field hide-on-med-and-down">
+          <input id="search" type="search" required />
+          <label class="label-icon" for="search">
+            <i class="material-icons">search</i>
+          </label>
+          <i class="material-icons">close</i>
+        </div>
+      </form>
+    </div>
+  </nav>
+
+  <main>{% block content %}{% endblock %}</main>
+  <footer class="page-footer">
+    <div>
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Footer Content</h5>
+          <p class="grey-text text-lighten-4">
+            You can use rows and columns here to organize your footer content.
+          </p>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Links</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+          </ul>
+        </div>
       </div>
-    </nav>
-
-    <main>{% block content %}{% endblock %}</main>
-    <footer class="page-footer">
+    </div>
+    <div class="footer-copyright">
       <div>
-        <div class="row">
-          <div class="col l6 s12">
-            <h5 class="white-text">Footer Content</h5>
-            <p class="grey-text text-lighten-4">
-              You can use rows and columns here to organize your footer content.
-            </p>
-          </div>
-          <div class="col l4 offset-l2 s12">
-            <h5 class="white-text">Links</h5>
-            <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-            </ul>
-          </div>
-        </div>
+        © 2014 Copyright Text
+        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
       </div>
-      <div class="footer-copyright">
-        <div>
-          © 2014 Copyright Text
-          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-        </div>
-      </div>
-    </footer>
+    </div>
+  </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+</body>
+
 </html>
