--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -13,3 +13,9 @@ html {
   width: 100%;
   max-width: 100%;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
