--- a/templates/top-games.html
+++ b/templates/top-games.html
@@ -7,7 +7,7 @@ block content %}
   <form id="rating_count_form" action="/top-games" method="get">
     <label for="rating_count">Minimum number of ratings:</label>
     <input type="number" id="rating_count" name="rating_count" value="{{ rating_count }}">
-    <button type="submit">Submit</button>
+    <button type="submit">Filter</button>
   </form>
 
   <section class="games-container">
