--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -3,3 +3,9 @@ main {
   color: white;
   padding: 20px 3%;
 }
+
+@media only screen and (max-width: 600px) {
+  main {
+    padding: 20px 0;
+  }
+}
