--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,23 +2,34 @@
 <html>
 
 <head>
+  <!-- sidenav script -->
   <script>
     document.addEventListener("DOMContentLoaded", function () {
       var elems = document.querySelectorAll(".sidenav");
       var instances = M.Sidenav.init(elems);
     });
   </script>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{% block title %} {% endblock %}</title>
   <link rel="icon" href="../static/img/channels4_profile.png" type="image/x-icon">
+
+  <!-- Materialize links -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
+  <!-- Internal stylesheets -->
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/index.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/navbar.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/footer.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/cards.css') }}" />
+
+  <!-- Google fonts -->
+
+
+
 </head>
 
 <body>
