Começando o dev da página de login

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,4 +2,7 @@
 block content %}
 <h1>Steam verde</h1>
 <p>why the hell is that footer so fking big????</p>
+<a href="/login">
+    Login
+  </a>
 {% endblock %}
