--- a/static/styles/cards.css
+++ b/static/styles/cards.css
@@ -64,7 +64,7 @@
   padding-top: 5%;
   border-radius: 2px;
   width: 420px;
-  height: 1000px;
+  height: 920px;
   text-align: center;
 }
 
@@ -100,9 +100,9 @@
 
 .games-container h2 {
   font-size: 1.6rem;
-  margin: 30px 0 0 0;
+  margin: 15px 0 0 0;
   max-width: 300px;
-  height: 80px;
+  height: 60px;
 }
 
 .games-container h3 {
@@ -113,6 +113,8 @@
 #cover {
   width: 367.5px;
   height: 490px;
+  
+  box-shadow: 0px 0px 30px 5px #263c5c;
 }
 
 .star-rating {
@@ -134,28 +136,59 @@
 
 .platforms {
   display: flex;
-  width: 340px;
+  width: 420px;
   justify-content: center;
   margin-top: 10px;
   flex-wrap: wrap;
-  height: 138px;
   overflow: hidden;
-}
-
-.platforms li {
-  max-width: 55px;
+  
 }
 
 .platforms img {
-  margin: 0 5px;
-  width: 45px;
-  height: 45px;
+  margin: 5px 0;
+  min-width: 30px;
+  min-height: 30px;
+  width: 30px;
+  height: 30px;
+  max-width: 30px;
+  max-height: 30px;
   border-radius: 50%;
+  border: 1px solid black;
 }
 
-#platform-name {
+#show-all-platforms {
+  margin: 5px 0;
+  min-width: 30px;
+  min-height: 30px;
+  width: 30px;
+  height: 30px;
+  max-width: 30px;
+  max-height: 30px;
+  border-radius: 50%;
+  border: 1px solid black;
+  font-size: 1.3rem;
+}
+
+.platforms li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height:60px;
+  max-height:60px;
+  min-width: 50px;
+  max-width: 50px;
+  margin: 0 1px;
+}
+
+.platforms li p {
   font-size: 0.5rem;
   margin: 0;
+}
+
+#no-platforms-exception {
+  font-size: 0.8rem;
+  width: 100%;
+  margin-top: 15px;
 }
 
 @media only screen and (max-width: 1700px) {
