--- a/templates/top-games.html
+++ b/templates/top-games.html
@@ -6,7 +6,7 @@ block content %}
 
   <form id="rating_count_form" action="/top-games" method="get">
     <label for="rating_count">Minimum number of votes:</label>
-    <input type="number" id="rating_count" name="rating_count" value="{{ rating_count }}" placeholder="1000">
+    <input type="number" id="rating_count" name="rating_count" value="{{ rating_count }}" placeholder="1000" />
     <button type="submit">Filter</button>
   </form>
 
@@ -15,32 +15,82 @@ block content %}
     <div class="game-card">
       <img src="https:{{ item['cover']['url'] }}" id="cover" />
       <h2>{{ item.name }}</h2>
+
       <section>
         <h3>Platforms</h3>
+        {% if item['platforms']|length %}
         <ul class="platforms">
-          {% for platform in item["platforms"] %}
-          <li>
-            {% if platform['platform_logo'] %}
-            <img src='https:{{platform["platform_logo"]["url"]}}' alt="game plataform">
-            <p id='platform-name'>{{platform['name']}}</p>
+
+          {% for platform in item["platforms"]%}
+          {% if item["platforms"]|length > 6 %}
+          {% if loop.index < 6 %} {% if platform["platform_logo"] %} <li>
+            <img src='https:{{platform["platform_logo"]["url"]}}' alt="Game Platform Logo" />
+            <p class="platform-name">{{platform['name']}}</p>
+            </li>
+            {% else %}
+            <li>
+              <img src="https://via.placeholder.com/300x200.png?text=Image+Not+Found" alt="Game Platform Logo" />
+              <p class="platform-name">{{platform['name']}}</p>
+            </li>
             {% endif %}
-          </li>
-          {% endfor %}
+            {% else %}
+            {% if platform["platform_logo"] %}
+            <li style="display: none" id='B{{item["id"]}}'>
+              <img src='https:{{platform["platform_logo"]["url"]}}' alt="Game Platform Logo" />
+              <p class="platform-name">{{platform['name']}}</p>
+            </li>
+            {% else %}
+            <li style="display: none" id='B{{item["id"]}}'>
+              <img src="https://via.placeholder.com/300x200.png?text=Image+Not+Found" alt="Game Platform Logo" />
+              <p class="platform-name">{{platform['name']}}</p>
+            </li>
+            {% endif %}
+            {% endif %}
+            {% else %}
+            {% if platform["platform_logo"] %}
+            <li>
+              <img src='https:{{platform["platform_logo"]["url"]}}' alt="Game Platform Logo" />
+              <p class="platform-name">{{platform['name']}}</p>
+            </li>
+            {% else %}
+            <li>
+              <img src="https://via.placeholder.com/300x200.png?text=Image+Not+Found" alt="Game Platform Logo" />
+              <p class="platform-name">{{platform['name']}}</p>
+            </li>
+            {% endif %}
+            {% endif %}
+            {% endfor %}
+
+            {% if item["platforms"]|length > 6 %}
+            <li class="show-all-platforms-li" id='A{{item["id"]}}' onclick="showAllPlatforms(this.id)">
+              <button id="show-all-platforms">+</button>
+              <p class="platform-name">See more</p>
+            </li>
+            {% endif %}
+
         </ul>
+        {% else %}
+        <p id="no-platforms-exception">
+          No platforms were registered for this game
+        </p>
+        {% endif %}
       </section>
+
       <h3>Rating</h3>
       <section class="stars">
         <div class="star-rating">
-          <img src="../static/img/Star_full.svg.png" alt="Full star">
-          <img src="../static/img/Star_full.svg.png" alt="Full star">
-          <img src="../static/img/Star_full.svg.png" alt="Full star">
-          <img src="../static/img/Star_full.svg.png" alt="Full star">
-          <img src="../static/img/Star_full.svg.png" alt="Full star">
+          <img src="../static/img/Star_full.svg.png" alt="Full star" />
+          <img src="../static/img/Star_full.svg.png" alt="Full star" />
+          <img src="../static/img/Star_full.svg.png" alt="Full star" />
+          <img src="../static/img/Star_full.svg.png" alt="Full star" />
+          <img src="../static/img/Star_full.svg.png" alt="Full star" />
         </div>
       </section>
 
-      <h4 id='rating-number'>({{"%.2f"|format(item.rating/20)}}/5.00)</h4>
-      <span style="font-size: 10px;"> Based on {{item.rating_count}} votes </span>
+      <h4 id="rating-number">({{"%.2f"|format(item.rating/20)}}/5.00)</h4>
+      <span style="font-size: 10px">
+        Based on {{item.rating_count}} votes
+      </span>
 
       <button>Details</button>
     </div>
@@ -49,16 +99,45 @@ block content %}
 </div>
 
 <script>
-
-
-  const starRatings = document.querySelectorAll(".star-rating");
+  // <!-- Star rating script-->
+  //captures the json sent from python
   const json = JSON.parse('{{newJson|tojson}}');
-  const data = json.data
-  console.log(json.data)
+  const starRatings = document.querySelectorAll(".star-rating");
+  //for each game, gets the rating (in base 100) from the json, calculates the width of the stars based on this rating, and sets the style of the star-rating div based on it
   for (let i = 0; i < starRatings.length; i++) {
     const rating = json.data[i].rating.toFixed(2)
+    //math explanation: each star has 25px; the number comes in base 100(i used toFixed(2) to avoid desnecessary math), but the stars are base 5; to turn to base 100 for base 5, the rating is divided by 20 and multipled by 25 witch is the star width.
+    //E.G: if rating = 50, 40/20 = 2 * 25 = 50px of the div will be displayed. That ensures that stars are very precise.
     const starWidth = rating / 20 * 25;
     starRatings[i].style.width = `${starWidth}px`;
+  }
+
+  // <!-- Platforms script for "show more" button-->
+  //when clicked, a show more button calls this function with "this.id" as param 
+  function showAllPlatforms(clicked_id) {
+
+    //captures the <li> and <button> of the game, based on the id 
+    //the id's are ordered by "A + item.id" for <li> and "B + item.id" for <button>
+    const platformListItems = document.querySelectorAll(`#${clicked_id.replace("A", "B")}`);
+    const platformButtonShow = document.querySelector(`#${clicked_id}`);
+
+    //iterates over all li's of the game, transforming their display from 'none' to 'flex'
+    for (each of platformListItems) each.style.display = "flex";
+    //transforms 'show-more-button' display from 'flex' to 'none'
+    platformButtonShow.style.display = "none";
+
+    //creates a new <li> (show-less-button li), appends html to it, gives it an 'onclick' event that reverts the action above and 
+      const newEl = document.createElement("li");
+      newEl.innerHTML = `<button id = 'show-all-platforms'>-</button><p class="platform-name">See less</p> `
+      newEl.onclick = () => {
+        for (each of platformListItems) each.style.display = "none";
+        platformButtonShow.style.display = "flex";
+        newEl.style.display = 'none'
+      }
+    
+    //appends the 'show less button li' to the last <li> of the game. 
+    platformListItems[platformListItems.length - 1].after(newEl);
+
   }
 </script>
 
