--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -4,6 +4,11 @@
     width: 50%;
 }
 
+.spacing {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
 .input-field {
     margin-left: auto;
     margin-right: auto;
@@ -16,5 +21,23 @@
 }
 
 .submit-button:hover {
-    background-color: rgba(18, 112, 0);
+    background-color: rgb(118, 184, 63);
+}
+
+input[type="text"],
+input[type="password"] {
+    color: white;
+}
+
+input[type="text"]:focus,
+input[type="password"]:focus {
+    border-bottom-color: rgb(118, 184, 63) !important;
+}
+
+.password-constraints {
+    text-align: left;
+    font-size: 0.80em;
+    display: none;
+    margin-bottom: 10px;
+    /* visibility: hidden; */
 }
