--- a/templates/layout-login.html
+++ b/templates/layout-login.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/cards.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/login.css') }}" />
+  <script src="{{ url_for('static', filename='scripts/jquery.js') }}"></script>
+  <script src="{{ url_for('static', filename='scripts/register.js') }}"></script>
 </head>
 
 <body>
