--- a/static/styles/cards.css
+++ b/static/styles/cards.css
@@ -64,8 +64,9 @@
   padding-top: 5%;
   border-radius: 2px;
   width: 420px;
-  height: 920px;
+  height: auto;
   text-align: center;
+  padding-bottom: 30px;
 }
 
 .games-container div p {
@@ -96,6 +97,7 @@
 .games-container div button:hover {
   background-color: transparent;
   color: #76b83f;
+  border: 1px solid #76b83f;
 }
 
 .games-container h2 {
@@ -113,7 +115,7 @@
 #cover {
   width: 367.5px;
   height: 490px;
-  
+
   box-shadow: 0px 0px 30px 5px #263c5c;
 }
 
@@ -141,7 +143,6 @@
   margin-top: 10px;
   flex-wrap: wrap;
   overflow: hidden;
-  
 }
 
 .platforms img {
@@ -165,16 +166,39 @@
   max-width: 30px;
   max-height: 30px;
   border-radius: 50%;
+  font-size: 1.3rem;
+}
+#show-all-platforms:hover {
+  background-color: transparent;
+  color: #76b83f;
+  border: 1px solid #76b83f;
+}
+
+#hide-all-platforms {
+  margin: 5px 0;
+  min-width: 30px;
+  min-height: 30px;
+  width: 30px;
+  height: 30px;
+  max-width: 30px;
+  max-height: 30px;
+  border-radius: 50%;
   border: 1px solid black;
   font-size: 1.3rem;
+  transform: rotate(45deg);
+}
+#hide-all-platforms:hover {
+  background-color: transparent;
+  border: 1px solid rgb(145, 30, 30);
+  color: rgb(145, 30, 30);
 }
 
 .platforms li {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height:60px;
-  max-height:60px;
+  min-height: 60px;
+  max-height: 60px;
   min-width: 50px;
   max-width: 50px;
   margin: 0 1px;
@@ -214,10 +238,16 @@
   #cover {
     width: 95%;
   }
-  .platforms {
-    width: 95%;
-  }
+
   #cover {
     height: 110vw;
   }
+}
+
+#plus-sign {
+  font-size: 1rem;
+
+  align-items: center;
+  width: 14px;
+  height: 14px;
 }
