--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/cards.css') }}" />
 
   <!-- Google fonts -->
-
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
 
 
 
