styles: adding filters styles, changing fonts, adding styles to buttons and anchor tags

--- a/static/styles/cards.css
+++ b/static/styles/cards.css
@@ -1,42 +1,51 @@
-.title {
-  color: white;
-  text-align: center;
-  margin: 2rem;
-  margin-bottom: 0;
+#filters {
+  margin: 30px;
+}
+
+#add-filters {
+  display: flex;
+  justify-content: flex-end;
+  margin: 2 0px;
+}
+
+#add-filters button {
+  font-size: 1rem;
+  height: auto;
+  width: auto;
+  padding: 5px;
 }
 
 #rating_count_form {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
   margin: 30px 0;
+  align-items: end;
+  display: none;
+}
+#rating_count_form .form-container {
+  border-radius: 5px;
+  padding: 10px;
+  border: 1px solid #76b83f;
+  display: flex;
+  flex-direction: column;
 }
 
 #rating_count_form label {
   font-size: 1rem;
 }
+
 #rating_count_form input {
   color: white;
   width: 50px;
-  margin: 0 10px;
   font-size: 1rem;
   text-align: center;
-  height: 2rem;
+  height: 1.8rem;
 }
 #rating_count_form button {
-  background-color: #304a67;
-  border: 1px solid #000811;
-  color: white;
-  border-radius: 5px;
   font-size: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  transition: 0.5s;
   height: 2rem;
   width: 5rem;
+  align-self: center;
 }
 
 .container {
@@ -79,25 +88,8 @@
 }
 
 .games-container div button {
-  background-color: #304a67;
-  border: 1px solid #000811;
-  color: white;
-  border-radius: 5px;
-  font-size: 1.1rem;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  transition: 0.5s;
-  height: 3rem;
-  width: 7rem;
   margin-top: 20px;
-}
-
-.games-container div button:hover {
-  background-color: transparent;
-  color: #76b83f;
-  border: 1px solid #76b83f;
 }
 
 .games-container h2 {
@@ -115,8 +107,8 @@
 #cover {
   width: 367.5px;
   height: 490px;
-
-  box-shadow: 0px 0px 30px 5px #263c5c;
+  box-shadow: 0px -4px 20px 10px #293e55;
+  margin-bottom: 20px;
 }
 
 .star-rating {
@@ -138,7 +130,7 @@
 
 .platforms {
   display: flex;
-  width: 420px;
+  width: 100%;
   justify-content: center;
   margin-top: 10px;
   flex-wrap: wrap;
@@ -147,24 +139,19 @@
 
 .platforms img {
   margin: 5px 0;
-  min-width: 30px;
-  min-height: 30px;
-  width: 30px;
-  height: 30px;
-  max-width: 30px;
-  max-height: 30px;
+  width: 28px;
+  height: 28px;
+  min-width: 28px;
+  min-height: 28px;
   border-radius: 50%;
   border: 1px solid black;
 }
 
 #show-all-platforms {
+  background-color: #293e55;
   margin: 5px 0;
-  min-width: 30px;
-  min-height: 30px;
-  width: 30px;
-  height: 30px;
-  max-width: 30px;
-  max-height: 30px;
+  width: 28px;
+  height: 28px;
   border-radius: 50%;
   font-size: 1.3rem;
 }
@@ -175,6 +162,7 @@
 }
 
 #hide-all-platforms {
+  background-color: #293e55;
   margin: 5px 0;
   min-width: 30px;
   min-height: 30px;
@@ -229,16 +217,20 @@
   .games-container {
     grid-template-columns: 1fr;
   }
+  #filters {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
 @media only screen and (max-width: 415px) {
   .game-card {
     width: 90%;
-    height: 270vw;
   }
   #cover {
     width: 95%;
   }
-
   #cover {
     height: 110vw;
   }
@@ -246,7 +238,14 @@
 
 #plus-sign {
   font-size: 1rem;
-
+  align-items: center;
+  width: 14px;
+  height: 14px;
+  display: block;
+}
+#plus-sign:before {
+  display: block;
+  font-size: 1rem;
   align-items: center;
   width: 14px;
   height: 14px;
