--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,15 +20,35 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
   <!-- Internal stylesheets -->
+
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/patterns/buttons.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/patterns/page-titles.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/patterns/links.css') }}" />
+
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/index.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/navbar.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/footer.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/cards.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/index.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/navbar.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/footer.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/cards.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/login.css') }}" />
+
+  <!-- Jquery scripts -->
+  <script src="{{ url_for('static', filename='scripts/jquery.js') }}"></script>
+  <script src="{{ url_for('static', filename='scripts/register.js') }}"></script>
 
   <!-- Google fonts -->
-  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Montserrat&display=swap"
+    rel="stylesheet">
 
+  <!-- FI icons -->
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
 
 
 </head>
@@ -50,15 +70,15 @@
           </a>
         </li>
         <li>
-          <a href="/top-games">
+          <a href="/login">
             <i class="material-icons left">view_module</i>
-            List of top games
+            Login
           </a>
         </li>
         <li>
-          <a href="/top-games">
+          <a href="/register">
             <i class="material-icons left">view_module</i>
-            List of top games
+            Register
           </a>
         </li>
       </ul>
@@ -117,7 +137,7 @@
 
   <main>{% block content %}{% endblock %}</main>
   <footer class="page-footer">
-    <div>
+    <!-- <div>
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Footer Content</h5>
@@ -135,11 +155,11 @@
           </ul>
         </div>
       </div>
-    </div>
-    <div class="footer-copyright">
+    </div> -->
+    <div class="footer-copyright" id="footer-copyright">
       <div>
-        © 2014 Copyright Text
-        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        © 2023 Steam Verde
+        <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
       </div>
     </div>
   </footer>
