--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,21 @@
-{% extends "layout-login.html" %} {% block title %} Steam verde {% endblock %} {% block content %}
-  <div class="container">
-    <div class="form-box">
-      <form action="{{ url_for('login')}}" method="POST">
-        <h1>Login</h1>
-        <div class="input-field">
-          <label for="username"><b>Username</b></label>
-          <input id="username" type="text" placeholder="Enter Username" name="username" required>
-        </div>
-  
-        <div class="input-field">
-          <label for="password"><b>Password</b></label>
-          <input id="password" type="password" placeholder="Enter Password" name="password" required>
-        </div>
-  
-        <button class="waves-effect waves-light btn-large submit-button" type="submit">Login</button>
-      </form>
-      <p class="spacing">No account? <a href="register">Create one</a></p>
-    </div>
+{% extends "layout.html" %} {% block title %} Login {% endblock %} {% block content %}
+<div class="container">
+  <div class="form-box">
+    <form action="{{ url_for('login')}}" method="POST">
+      <h1>Login</h1>
+      <div class="input-field">
+        <label for="username"><b>Username</b></label>
+        <input id="username" type="text" name="username" required>
+      </div>
+
+      <div class="input-field">
+        <label for="password"><b>Password</b></label>
+        <input id="password" type="password" name="password" required>
+      </div>
+
+      <button type="submit">Login</button>
+    </form>
+    <p class="spacing">No account? <a href="register">Create one</a></p>
   </div>
+</div>
 {% endblock %}
-  
