--- a/templates/register.html
+++ b/templates/register.html
@@ -1,40 +1,40 @@
-{% extends "layout-login.html" %} {% block title %} Steam verde {% endblock %} {% block content %}
-  <div class="container">
-    <div class="form-box">
-      <form action="{{ url_for('login')}}" method="POST">
-        <h1>Register</h1>
-        <div class="input-field">
-            <label for="email"><b>Email</b></label>
-            <input id="email" type="text" placeholder="Enter Email" name="email" required>
-        </div>
+{% extends "layout.html" %} {% block title %} Register {% endblock %} {% block content %}
+<div class="container">
+  <div class="form-box">
+    <form action="{{ url_for('login')}}" method="POST">
+      <h1>Register</h1>
+      <div class="input-field">
+        <label for="email"><b>Email</b></label>
+        <input id="email" type="text" name="email" required>
+      </div>
 
-        <div class="input-field">
-          <label for="username"><b>Username</b></label>
-          <input id="username" type="text" placeholder="Enter Username" name="username" required>
-        </div>
-  
-        <div class="input-field">
-          <label for="password"><b>Password</b></label>
-          <input id="password" type="password" placeholder="Enter Password" name="password" required>
+      <div class="input-field">
+        <label for="username"><b>Username</b></label>
+        <input id="username" type="text" name="username" required>
+      </div>
 
-          <div class="password-constraints">
-              <ul>
-                  <p>Your password must contain:</p>
-                  <li id="length">1. At least 8 characters in length</li>
-                  <li id="lowercase">2. Lower case letters (a-z)</li>
-                  <li id="uppercase">3. Upper case letters (A-Z)</li>
-                  <li id="numbers">4. Numbers (0-9)</li>
-              </ul>
-          </div>
+      <div class="input-field">
+        <label for="password"><b>Password</b></label>
+        <input id="password" type="password" name="password" required>
+
+        <div class="password-constraints">
+          <ul>
+            <p>Your password must contain:</p>
+            <li id="length">1. At least 8 characters in length</li>
+            <li id="lowercase">2. Lower case letters (a-z)</li>
+            <li id="uppercase">3. Upper case letters (A-Z)</li>
+            <li id="numbers">4. Numbers (0-9)</li>
+          </ul>
         </div>
-  
-        <div class="input-field">
-          <label for="confirm-password"><b>Confirm Password</b></label>
-          <input id="confirm-password" type="password" placeholder="Enter the Same Password" name="confirm-password" required>
-        </div>
-  
-        <button class="waves-effect waves-light btn-large submit-button" type="submit">Register</button>
-      </form>
-    </div>
+      </div>
+
+      <div class="input-field">
+        <label for="confirm-password"><b>Confirm Password</b></label>
+        <input id="confirm-password" type="password" name="confirm-password" required>
+      </div>
+
+      <button type="submit">Register</button>
+    </form>
   </div>
+</div>
 {% endblock %}
