Passando username para tela de login ao criar conta

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
         <h1>Login</h1>
         <div class="input-field">
           <label for="username"><b>Username</b></label>
-          <input id="username" type="text" value="{{ email }}" name="username">
+          <input id="username" type="text" value="{{ username }}" name="username">
         </div>
   
         <div class="input-field">
