Criando classes e mostrando flash messages de sucesso ou erro

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -19,3 +19,25 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.message-error {
+  padding: 20px;
+  width: 25%;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  color: #970020;
+  background-color: #ffd5de;
+  border-radius: 5px;
+}
+
+.message-success {
+  padding: 20px;
+  width: 25%;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  color: #180106;
+  background-color: #cffbc8;
+  border-radius: 5px;
+}
