--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/footer.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/cards.css') }}" />
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/login.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/login_register.css') }}" />
   <script src="{{ url_for('static', filename='scripts/jquery.js') }}"></script>
   <script src="{{ url_for('static', filename='scripts/register.js') }}"></script>
 </head>
@@ -107,11 +107,22 @@
   </nav>
 
   <main>
-    {% with messages = get_flashed_messages() %}
+    {% with messages = get_flashed_messages(category_filter=["message-error"]) %}
       {% if messages %}
-        <ul class="register-message-alert">
+        <ul class="message-error">
         {% for message in messages %}
           <li>{{ message }}</li>
+          {{ break }}
+        {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
+    {% with messages = get_flashed_messages(category_filter=["message-success"]) %}
+      {% if messages %}
+        <ul class="message-success">
+        {% for message in messages %}
+          <li>{{ message }}</li>
+          {{ break }}
         {% endfor %}
         </ul>
       {% endif %}
