Iniciando funcionamento da tela de Esqueci a Senha, e colocando icones das midias sociais

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,6 +36,7 @@
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/cards.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/login_register.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/social-logins.css') }}" />
 
   <!-- Jquery scripts -->
   <script src="{{ url_for('static', filename='scripts/jquery.js') }}"></script>
